# okra-packed

./: .clang-format.py  .gitlab-ci.yml  .gitmodules  meson.build
example/: example.cpp  meson.build
lib/: Packer.h  Unpacker.h  meson.build
src/: Packed.cpp  Packed.h  meson.build
subprojects/cpputest/: meson.build
test/: PackedTest.cpp  meson.build
